--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap');
+
 * {
     padding: 0;
     margin: 0;
@@ -11,12 +12,19 @@
     transition: all 0.4s ease-in-out 0.5s
 }
 
+.main-content-part {
+    overflow: auto;
+}
+
 /* sidebar style stale */
 .sidebar-content {
     background: #162141;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    position: sticky;
+    left: 0;
+    height: 100vh;
 }
 
 .sidebar-icon-image {
@@ -27,12 +35,14 @@
 .top-link-icon {
     width: 260px;
     margin-top: 10px;
+    font-weight: 600;
+    font-size: 20px;
 
 }
 
 .solid-divider {
     margin: 5px 0;
-    border-bottom: 3px solid rgba(15, 126, 194, 0.12);
+    border-bottom: 3px solid rgb(115, 111, 111);
 }
 
 .sidebar-link-text {
@@ -65,6 +75,10 @@
     line-height: 20px;
     color: #FAFAFA;
     margin-top: 13px;
+}
+
+.nav-sidevar-link {
+    margin-bottom: 13px;
 }
 
 /* sidebar style end */
@@ -113,16 +127,18 @@
     grid-template-columns: repeat(4, 1fr);
     gap: 10px;
     padding: 24px;
+
 }
 
 .card-content {
-    padding: 20px;
+    padding: 15px 10px;
     gap: 16px;
     box-sizing: border-box;
     background: white;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.05);
     width: 100%;
     height: 150px;
+    border-radius: 10px;
 }
 
 .card-icom-img {
@@ -183,6 +199,7 @@
     border-radius: 4px;
     width: 120px;
     height: 30px;
+
 }
 
 .card-input-date p {
@@ -202,38 +219,47 @@
     grid-template-columns: 47% 25% 25%;
     gap: 10px;
     margin: 5px 20px;
+
 }
 
 .chart1 {
     background: white;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.05);
-    padding: 10px;
+    padding: 10px 12px;
+    border-radius: 10px;
 }
 
 .chart2 {
     background: white;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.05);
     padding: 10px;
-}
-
-select {
-    padding: 0px 1px 0px 0px;
-    width: 160px;
-    height: 30px;
-    background: linear-gradient(180deg, rgba(0, 0, 0, 2e-06) 0%, rgba(0, 0, 0, 0.02) 100%), #F5F5F5;
+    padding: 10px 12px;
     border-radius: 10px;
 }
 
-.select {
-    padding: 0px 1px 0px 0px;
-    width: 100px;
+.select-Project {
+    width: 130px;
     height: 30px;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 2e-06) 0%, rgba(0, 0, 0, 0.02) 100%), #F5F5F5;
+    border-radius: 10px;
+    border: none;
+}
+
+.select-Performance {
+    padding: 0px 1px 0px 0px;
+    width: 70px;
+    height: 30px;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 2e-06) 0%, rgba(0, 0, 0, 0.02) 100%), #F5F5F5;
+    border-radius: 10px;
+    border: none;
 }
 
 .performance {
     background: white;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.05);
     padding: 10px;
+    padding: 10px 12px;
+    border-radius: 10px;
 }
 
 .performance-member img {
@@ -272,9 +298,35 @@ select {
     color: #424242;
 }
 
+.table-parrent {
+    overflow-x: scroll;
+}
+
+.table-class {
+    width: 100%;
+}
+
+.notification-menu {
+    position: relative;
+    right: 25px;
+
+}
+
+.notification-item {
+    padding: 0 10px;
+    width: 300px;
+}
+
+.notification-image {
+    width: 32px;
+    height: 35.2px;
+    border-radius: 50%;
+    margin-top: -10px;
+}
+
 @media screen and (max-width: 768px) {
-    .sidebar-content {
-        display: none;
+    .menu-link:focus {
+        border-bottom: none;
     }
 
     #main-content {
@@ -284,20 +336,35 @@ select {
         transition: all 0.4s ease-in-out 0.5s
     }
 
+    .main-content-part {
+        overflow: auto;
+    }
+
     .card-contaniner {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(1, 1fr);
         gap: 10px;
         padding: 24px;
     }
 
     .chart-container {
         display: grid;
-        grid-template-columns:repeat(1, 1fr);
+        grid-template-columns: repeat(1, 1fr);
         gap: 10px;
         margin: 5px 20px;
     }
-    
+
+    .notification-menu {
+        position: relative;
+        right: 0;
+        bottom: 7px;
+
+    }
+
+    .notification-item {
+        width: 100%;
+    }
+
 
 }
 
@@ -310,5 +377,5 @@ select {
     }
 
 
-    
+
 }
