--- a/css/setup.css
+++ b/css/setup.css
@@ -18,7 +18,6 @@
   transform: translate(0, -50%);
   background-color: #fff;
   border-radius: 5px;
-  /* box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.05); */
   box-shadow: 0 0 7px rgba(0, 0, 0, 0.5);
   width: 50%;
   height: 100vh;
@@ -56,7 +55,7 @@
     position: absolute;
     top: 50%;
     right: -500px;
-    width: 80%
+    width: 80%;
   }
 
   
