--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,7 @@
     box-sizing: border-box;
     background: white;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.05);
+    border: 1px solid rgba(0, 0, 0, 0.08);
     width: 100%;
     height: 150px;
     border-radius: 10px;
@@ -208,7 +209,7 @@
     font-size: 14px;
     line-height: 20px;
     color: #424242;
-    margin-top: 12px;
+    margin-top: 5px;
 }
 
 /* card style end  */
@@ -228,6 +229,7 @@
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.05);
     padding: 10px 12px;
     border-radius: 10px;
+    border: 1px solid rgba(0, 0, 0, 0.08);
 }
 
 .chart2 {
@@ -236,6 +238,7 @@
     padding: 10px;
     padding: 10px 12px;
     border-radius: 10px;
+    border: 1px solid rgba(0, 0, 0, 0.08);
 }
 
 .select-Project {
@@ -261,6 +264,7 @@
     padding: 10px;
     padding: 10px 12px;
     border-radius: 10px;
+    border: 1px solid rgba(0, 0, 0, 0.08);
 }
 
 .performance-member img {
