--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 
 #main-content {
     display: grid;
-    grid-template-columns: 17% 83%;
+    grid-template-columns: 23% 77%;
     height: 100vh;
     transition: all 0.4s ease-in-out 0.5s
 }
@@ -24,7 +24,7 @@
     justify-content: space-between;
     position: sticky;
     left: 0;
-    height: 100vh;
+   
 }
 
 .sidebar-icon-image {
@@ -105,6 +105,9 @@
 }
 
 .menu-link:focus {
+    border-bottom: 2px solid #0F7EC2;
+}
+.menu-link:hover {
     border-bottom: 2px solid #0F7EC2;
 }
 
