--- a/css/setup.css
+++ b/css/setup.css
@@ -21,7 +21,7 @@
   box-shadow: 0 0 7px rgba(0, 0, 0, 0.5);
   width: 50%;
   height: 100vh;
-
+  overflow-y: scroll;
 
 }
 
@@ -37,6 +37,7 @@
 }
 .from-content{
   padding: 20px;
+  
 }
 
 .from-input {
@@ -54,6 +55,13 @@
  display: flex;
  justify-content: end;
  margin-bottom: 20px;
+}
+
+.from-textarea{
+  border: 2px solid rgb(207, 204, 204);
+  width: 100%;
+  height: 67px;
+  padding: 0 10px;
 }
 @media screen and (max-width: 768px) {
   #content {
