--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,8 @@
     left: 0;
     height: 100vh;
     overflow-y: scroll;  
-   
+    cursor: pointer;
+    
    
 }
 
@@ -69,13 +70,41 @@
     border-bottom: 3px solid rgb(115, 111, 111);
 }
 
-.sidebar-link-text {
+.side_nav a {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
     color: #FAFAFA;
+    text-decoration: none;  
+    cursor: pointer;   
+}
+.side_nav a:hover{
+    color: #FAFAFA;
+    text-decoration: none;
+}
+.side_nav{
+   margin-left: 10px;
+   margin-right: 10px;
+}
+.side_nav a.active_sidnav{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    background-color: white;
+    color: black;
+    border-radius: 5px;
+   
+}
+
+.active-sidebar-icon-image {
+    background-color: #0F7EC2;
+    opacity: 0.5;
+    pointer-events: none;
+    margin-top: -5px;
 }
 
 .dashboard-menu {
@@ -153,7 +182,7 @@
 /* card style start  */
 .card-contaniner {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns:repeat(4, 1fr);
     gap: 10px;
     padding: 24px;
 
@@ -167,7 +196,7 @@
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.05);
     border: 1px solid rgba(0, 0, 0, 0.08);
     width: 100%;
-    height: 150px;
+    height: 180px;
     border-radius: 10px;
 }
 
@@ -190,7 +219,10 @@
     align-items: center;
     color: #000000;
 }
-
+.card-date{
+    position: relative;
+    top: 10px;
+}
 .card1-time {
     color: #37B400;
 }
