--- a/css/client_project_Details.css
+++ b/css/client_project_Details.css
@@ -7,6 +7,16 @@
     cursor: pointer;
 }
 
+.setup-menu a.active_side_nav{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    background-color: white;
+    color: black;
+    border-radius: 5px;
+}
 
 .setup-menu a:hover{
     background-color: white;
@@ -72,4 +82,8 @@
 .report-icon img{
     width: 8px;
     height: 8px;
+}
+
+.setup-menu a{
+
 }
