--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@
     line-height: 24px;
     background-color: white;
     color: black;
-    border-radius: 5px;
+    /* border-radius: 5px; */
    
 }
 
