--- a/css/common.css
+++ b/css/common.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap');
+
 #open_chat {
     cursor: pointer;
 }
@@ -16,9 +18,13 @@
     box-sizing: border-box;
     /* overflow-y: scroll; */
 }
-.create-group{
-cursor: pointer;
+
+.create-group {
+    cursor: pointer;
+    width: 35px;
+    height: 35px;
 }
+
 .chat-close-btn {
     cursor: pointer;
 }
@@ -41,6 +47,12 @@ cursor: pointer;
 .chat-title {
     background-color: #0F7EC2;
     padding: 13px;
+    color: white;
+}
+
+.chat-title2 {
+    background-color: #0F7EC2;
+    padding: 5px 13px;
     color: white;
 }
 
@@ -87,11 +99,13 @@ cursor: pointer;
     bottom: 30px;
     position: relative;
     border-radius: 5px;
+
 }
 
 .chat-body {
     height: 100%;
     overflow-y: scroll;
+    scroll-behavior: smooth;
     margin-top: 20px;
     background: white;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.05);
@@ -143,7 +157,11 @@ cursor: pointer;
 
 .close-chat-details-btn {
     cursor: pointer;
+}
 
+.close-chat-details-btn img {
+    width: 15px;
+    height: 15px;
 }
 
 .chat-details-person-images {
@@ -238,10 +256,12 @@ cursor: pointer;
     cursor: pointer;
     color: white;
 }
-.modal-group-icon{
+
+.modal-group-icon {
     font-size: 30px;
     margin-top: -5px;
 }
+
 .group-title {
     background-color: #0F7EC2;
     color: white;
@@ -249,24 +269,59 @@ cursor: pointer;
     padding: 15px;
 }
 
-.group-cencle-button{
+.group-cencle-button {
     background-color: rgb(228, 223, 223);
     padding: 7px;
     border-radius: 10px;
     border: none;
 }
-.group-save-button{
-    background-color:#0F7EC2;
-    padding:7px;
-    border-radius: 10px; 
+
+.group-save-button {
+    background-color: #0F7EC2;
+    padding: 7px;
+    border-radius: 10px;
     color: white;
     margin-left: 20px;
     border: none;
 }
-.group-input{
+
+.group-input {
     width: 100%;
     height: 40px;
     border: 3px solid rgba(0, 0, 0, 0.08);
+}
+
+.person_name {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    color: #fff
+}
+
+.hover-image {
+    position: absolute;
+    display: none;
+
+}
+
+.chat_person_name {
+    padding: 10px;
+}
+
+.chat_person_name:hover .hover-image {
+    display: block;
+}
+
+.chat_person_name:hover {
+    background-color: rgb(238, 236, 236);
+    border-radius: 5px;
+
+}
+.pinned{
+    font-weight: 500;
+    font-size: 18px;
 }
 
 @media screen and (max-width: 768px) {
