--- a/css/client_project_Details.css
+++ b/css/client_project_Details.css
@@ -1,45 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap');
 
 
-.setup-menu{
+.dropdowns_sub_menu{
     display: none;
     background-color: #131010;
     cursor: pointer;
 }
 
-#Setup a.active_side_nav{
+.side_nav .dropdowns_menu a.active_sidnav,
+.side_nav .dropdowns_menu a.active_sidnav:hover{
+    background-color: white;
+    cursor: pointer; 
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
-    line-height: 24px;
-    background-color: white;
     color: black;
-    border: 3px solid rgba(1, 1, 1, 0.08);
-    
-}
-#report a.active_side_nav{
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    background-color: white;
-    color: black;
-    border: 3px solid rgba(1, 1, 1, 0.08);
-}
-.setup-menu a.active_side_nav{
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    background-color: white;
-    color: black;
-    /* border-radius: 5px; */
+    border-bottom: 1px solid rgba(0, 0, 0, 0.08);
 }
 
-.setup-menu a:hover{
+
+
+.dropdowns_sub_menu a:hover{
     background-color: white;
     cursor: pointer; 
     font-family: 'Inter';
@@ -49,42 +31,27 @@
     color: black;
 }
 
-.client-sumarry a:hover{
-    background-color: white;
+/* .client_drop_menu {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #FAFAFA;
+    cursor: pointer;
+} */
+
+.dropdowns_menu a.active_side_nav{
+    background-color: rgb(252, 247, 247);
     cursor: pointer; 
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     color: black;
+   
 }
 
-
-.client-sumarry {
-    display: none;
-    background-color: #131010;
-}
-
-
-
-#Setup a{
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    color: #FAFAFA;
-    cursor: pointer;
-}
-#report a{
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 24px;
-    color: #FAFAFA;
-    cursor: pointer;
-}
 
 .client-project-title {
     font-family: 'Inter';
@@ -97,14 +64,11 @@
 }
 .report-icon{
     float:right;
-
 }
-
+.caret_icont{
+    transform: rotate(90deg);
+}
 .report-icon img{
     width: 8px;
     height: 8px;
-}
-
-.setup-menu a{
-
 }
