--- a/css/style.css
+++ b/css/style.css
@@ -363,7 +363,7 @@
     color: #000000;
 }
 
-.Project-table-heading {
+.Project-table-heading th{
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
@@ -729,13 +729,23 @@
     width: 155px;
     height: 135px;
 }
-
+.project-table-images{
+    width: 35px;
+    height: 35px;
+    border-radius: 5px;
+}
 .icon-picture {
     cursor: pointer;
 }
 
 .icon-table {
     cursor: pointer;
+}
+.icon-table-bg{
+    background-color: #0F7EC2;
+   padding-left: 5px;
+   padding-right: 5px;
+    border-radius: 3px;
 }
 
 .project-show-table {
@@ -755,12 +765,16 @@
 .image-container {
     background: #FFFFFF;
     width: 190px;
-    height: 190px;
+    height: 230px;
     border: 1px solid rgba(0, 0, 0, 0.08);
     text-align: center;
-  
 }
-
+.image-container:hover{
+    background-color: #b2d6f2;
+}
+.image-container-active{
+    background-color: #b2d6f2;
+}
 .project-image {
     width:120px;
     height: 120px;
@@ -1458,6 +1472,94 @@
     border-radius: 50%;
 }
 
+.add_penalty{
+    margin-top: 20px;
+   border-top: 2px solid  #0F7EC2;
+   border-bottom: 2px solid rgba(0, 0, 0, 0.08);
+   border-right: 2px solid rgba(0, 0, 0, 0.08);
+   border-left: 2px solid rgba(0, 0, 0, 0.08);
+   padding: 20px;
+}
+.penalty_from_input {
+    border: 2px solid rgb(207, 204, 204);
+    width: 80%;
+    height: 37px;
+    padding: 0 10px;
+    border-radius: 5px;
+}
+.penalty_from_textarea{
+    border: 2px solid rgb(207, 204, 204);
+    width: 80%;
+    height: 60px;
+    padding: 0 10px;
+    border-radius: 5px;
+}
+.penalty-form-group {
+    display: flex;
+    align-items: center;
+}
+
+.penalty-form-group label {
+    width: 165px; 
+    text-align: right;
+    margin-right: 20px;
+}
+
+.penalty-form-group input,
+.penalty-form-group select {
+    flex: 1;
+}
+.penalty-form-group-btn{
+    margin-top: 10px;
+    margin-left: 180px;
+}
+
+.penalty_log_container{
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 7px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+}
+.log_from_input{
+    border: 2px solid rgb(207, 204, 204);
+    width: 250px;
+    height: 45px;
+    padding: 0 10px;
+    border-radius: 5px;
+
+}
+.log_date{
+    background-color: rgb(234, 51, 51);
+    color: white;
+    border: 2px solid rgb(207, 204, 204);
+    padding: 10px 10px;
+    border-radius: 5px;
+}
+
+.report_parameters{
+    border-top: 2px solid  #0F7EC2;
+   border-bottom: 2px solid rgba(0, 0, 0, 0.08);
+   border-right: 2px solid rgba(0, 0, 0, 0.08);
+   border-left: 2px solid rgba(0, 0, 0, 0.08);
+   padding: 20px;
+}
+.penalty_log_report{
+    border-top: 2px solid  #0F7EC2;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.08);
+    border-right: 2px solid rgba(0, 0, 0, 0.08);
+    border-left: 2px solid rgba(0, 0, 0, 0.08);
+    padding: 20px;
+}
+.log-form-btn{
+    height: 50px;
+    width: 90px;
+}
+
+
+.icon-table-active{
+    background-color: #bbbebf;
+    padding: 3px 5px;
+}
 @media screen and (max-width: 768px) {
     .menu-link:focus {
         border-bottom: none;
