--- a/client protal/client-protal.css
+++ b/client protal/client-protal.css
@@ -160,9 +160,10 @@
     font-weight: bold;
 }
 
-.notification{
+.notification {
     cursor: pointer;
 }
+
 .notification-icon1 {
     width: 25px;
     height: 25px;
@@ -207,6 +208,33 @@
     border-radius: 5px;
 }
 
+.welcome_section {
+    background: #F1F4FA;
+    padding: 35px;
+    text-align: center;
+}
+
+.welcome_section h6 {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 21px;
+    line-height: 25px;
+    color: #0F1222;
+}
+
+.welcome_client {
+    color: #37B400;
+}
+
+.welcome_client h4 {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 32px;
+    color: #0F1222;
+}
+
 /* Media query for small devices */
 @media (max-width: 767px) {
     .client-container {
@@ -218,6 +246,10 @@
         display: none;
     }
 
+    .clicent_side_nav a {
+        text-align: center;
+    }
+
     .dropdown-notification {
         width: 100%;
         max-width: 100%;
@@ -225,8 +257,33 @@
         left: 0;
         right: 0;
         bottom: 0;
-      
+
     }
 
+    .dropdown-container {
+        display: none;
+        position: absolute;
+        z-index: 9999;
+        background-color: white;
+        color: black;
+        border-radius: 7px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 100%;
 
+
+    }
+
+    .client_email_info {
+        text-align: center;
+    }
+
+    .client_top_nav_icon {
+        width: 20px;
+        height: 22px;
+    }
+
+    .client_top_nav_text {
+        font-size: 15px;
+    }
 }
