--- a/client protal/client-protal.css
+++ b/client protal/client-protal.css
@@ -2,7 +2,7 @@
 
 .client-container {
     display: grid;
-    grid-template-columns: 25% 75%;
+    grid-template-columns: 20% 80%;
     height: 100vh;
     transition: all 0.4s ease-in-out 0.5s
 }
@@ -210,8 +210,13 @@
 
 .welcome_section {
     background: #F1F4FA;
-    padding: 35px;
+    padding: 20px;
+   
+}
+
+.wellcome_massage {
     text-align: center;
+    margin-top: 40px;
 }
 
 .welcome_section h6 {
@@ -221,6 +226,11 @@
     font-size: 21px;
     line-height: 25px;
     color: #0F1222;
+}
+
+.welcome_divider {
+    margin-top: 30px;
+    width: 30%;
 }
 
 .welcome_client {
@@ -233,6 +243,204 @@
     font-weight: 500;
     font-size: 32px;
     color: #0F1222;
+}
+
+
+.card_container {
+    display: grid;
+    grid-template-columns: 25% 25% 48%;
+    grid-gap: 10px;
+
+}
+
+.card_item1,
+.card_item2,
+.card_item3 {
+    background: #FFFFFF;
+    border-radius: 10px;
+    align-items: center;
+    padding: 15px;
+
+}
+
+.cart1_content h4 {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 18px;
+    color: #0F7EC2;
+}
+
+.cart1_content {
+    background: #F1F4FA;
+    border-radius: 10px;
+    padding: 20px;
+}
+
+.time_schedule {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+}
+
+.cart1_content h6 {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #424242;
+}
+
+.cart1_content p {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 28px;
+    color: #162141;
+    margin-bottom: 0;
+}
+
+.card_item2_content1 {
+    padding: 20px;
+}
+
+.card_item2_content1 h6 {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    color: #666666;
+
+}
+
+.card_item2_content1 h4 {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 28px;
+}
+
+.card_item2_content1 h5 {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    letter-spacing: 0.18px;
+    color: #37B400;
+    background: rgba(55, 180, 0, 0.08);
+    border-radius: 30px;
+    padding: 5px 15px;
+}
+
+.amount_type {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+
+}
+
+.card_item2_content2 .paid {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 24px;
+    color: #0F7EC2;
+
+}
+
+.card_item2_content2 img {
+    width: 10px;
+    height: 10px;
+}
+
+.card_item2_content2 h4 {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+
+}
+
+.card_item2_content3 img {
+    width: 10px;
+    height: 10px;
+}
+
+.card_iteme_grid{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 10px;
+}
+.card_item2_content3 .due {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 24px;
+    color: #F31700;
+}
+
+.card_item2_content3 h4 {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+}
+
+.card_item3_content1 {
+    width: 100%;
+    height: 100%;
+
+}
+
+.card_item3_content1 img {
+    width: 100%;
+    height: 320px;
+
+}
+
+.card_item3_text h6 {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+}
+
+
+
+.card3_content_text h6 {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
+    color: #424242;
+
+}
+
+.card3_icon {
+    width: 48px;
+    height: 48px;
+    margin-top: 5px;
+}
+
+.card3_content_text h4 {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    color: #162141;
+    margin-top: -5px;
+}
+
+.project_list_text {
+    background: #F1F4FA;
+    border-radius: 5px;
+   padding: 5px 7px;
 }
 
 /* Media query for small devices */
@@ -285,5 +493,15 @@
 
     .client_top_nav_text {
         font-size: 15px;
+    }
+
+    .card_container {
+        display: grid;
+        grid-template-columns: 100%;
+    }
+    .card_iteme_grid{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        gap: 10px;
     }
 }
