--- a/client protal/client-protal.css
+++ b/client protal/client-protal.css
@@ -211,7 +211,7 @@
 .welcome_section {
     background: #F1F4FA;
     padding: 20px;
-   
+
 }
 
 .wellcome_massage {
@@ -230,6 +230,7 @@
 
 .welcome_divider {
     margin-top: 30px;
+    margin-bottom: 30px;
     width: 30%;
 }
 
@@ -370,11 +371,12 @@
     height: 10px;
 }
 
-.card_iteme_grid{
+.card_iteme_grid {
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 10px;
 }
+
 .card_item2_content3 .due {
     font-family: 'Inter';
     font-style: normal;
@@ -394,13 +396,16 @@
 .card_item3_content1 {
     width: 100%;
     height: 100%;
+    background: #F1F4FA;
+    border-radius: 5px;
+    padding: 10px;
 
 }
 
-.card_item3_content1 img {
+.pie_chart {
     width: 100%;
-    height: 320px;
-
+    height: 100%;
+   
 }
 
 .card_item3_text h6 {
@@ -440,7 +445,7 @@
 .project_list_text {
     background: #F1F4FA;
     border-radius: 5px;
-   padding: 5px 7px;
+    padding: 5px 7px;
 }
 
 /* Media query for small devices */
@@ -499,9 +504,10 @@
         display: grid;
         grid-template-columns: 100%;
     }
-    .card_iteme_grid{
+
+    .card_iteme_grid {
         display: grid;
-        grid-template-columns: repeat(1,1fr);
+        grid-template-columns: repeat(1, 1fr);
         gap: 10px;
     }
 }
