--- a/client protal/client-protal.css
+++ b/client protal/client-protal.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Roboto:wght@300;400;500&display=swap');
 
 .client-container {
     display: grid;
@@ -6,10 +7,27 @@
     height: 100vh;
     transition: all 0.4s ease-in-out 0.5s
 }
-
+.client-right-div{
+    overflow: auto;
+}
 .client-left-div {
     background: #12143F;
     color: white;
+    position: sticky;
+    overflow-y: scroll;
+}
+.client-left-div::-webkit-scrollbar {
+    width: 5px;
+}
+
+/* Track */
+.client-left-div::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+.client-left-div::-webkit-scrollbar-thumb {
+    background: #B67ED6;
 }
 
 .solid-divider {
@@ -127,9 +145,12 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    position: sticky;
-    left: 0;
     height: 100vh;
+    
+   
+  
+    
+    
 }
 
 .client_top_navbar {
@@ -405,7 +426,7 @@
 .pie_chart {
     width: 100%;
     height: 100%;
-   
+
 }
 
 .card_item3_text h6 {
@@ -446,6 +467,141 @@
     background: #F1F4FA;
     border-radius: 5px;
     padding: 5px 7px;
+}
+
+.table-parrent {
+    overflow-x: scroll;
+}
+
+.overlay-info {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+    z-index: 999;
+    overflow: hidden;
+}
+
+.content-info {
+    position: absolute;
+    top: 50%;
+    right: -500px;
+    transform: translate(0, -50%);
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 7px rgba(0, 0, 0, 0.5);
+    width: 50%;
+    height: 100vh;
+    overflow-y: scroll;
+    border: 1px solid rgb(162, 158, 158);
+
+}
+
+.title {
+    background-color: #0F7EC2;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    font-size: 18px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+}
+
+.close-icon {
+    cursor: pointer;
+}
+
+.billing-dropdown {
+    background-color: #0F7EC2;
+}
+
+.billing-dropdown {
+    cursor: pointer;
+}
+
+.billing-dropdown a {
+    color: white !important;
+    padding: 0 3px;
+    margin-left: 10px;
+
+}
+
+.billing-dropdown a:hover {
+    background-color: transparent;
+    color: white;
+}
+
+.Billing-title {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 19px;
+    color: #000000;
+
+}
+
+.billing_title {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    color: #000000;
+
+}
+
+.Billing_info p {
+    display: flex;
+    align-items: center;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    color: #666666;
+}
+
+.Billing_info .label {
+    flex-basis: 100px;
+    /* Adjust the width of the label as needed */
+}
+
+.Billing_info .Setup_Info {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    margin-left: 40%;
+    color: #424242;
+}
+
+.billing-table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.billing-table-th,
+.billing-table-td {
+    padding: 10px;
+    border: 1px solid rgba(0, 0, 0, 0.08);
+
+}
+
+th {
+    background-color: rgba(0, 0, 0, 0.02);
+    color: #424242;
+}
+
+.Billing_data_table {
+    min-height: 100vh;
+    background: #F1F4FA;
+    
+}
+.data-table{
+    position: sticky;
+    overflow-y: scroll;
 }
 
 /* Media query for small devices */
@@ -509,5 +665,13 @@
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         gap: 10px;
+    }
+
+    .content-info {
+        width: 100%;
+    }
+
+    .Billing_info .Setup_Info {
+        margin-left: 10%;
     }
 }
