--- a/client protal/client-protal.css
+++ b/client protal/client-protal.css
@@ -92,7 +92,6 @@
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
-    line-height: 24px;
     color: #FAFAFA;
     text-decoration: none;
     cursor: pointer;
@@ -113,6 +112,7 @@
     color: #0F7EC2;
     border-radius: 5px;
     margin: 0 10px;
+    padding: 8px 4px;
 }
 
 .clicent_side_nav a:hover {
@@ -120,6 +120,7 @@
     color: #0F7EC2;
     border-radius: 5px;
     margin: 0 10px;
+    padding: 8px 4px;
 
 }
 
