--- a/client protal/client-protal.css
+++ b/client protal/client-protal.css
@@ -7,15 +7,18 @@
     height: 100vh;
     transition: all 0.4s ease-in-out 0.5s
 }
-.client-right-div{
+
+.client-right-div {
     overflow: auto;
 }
+
 .client-left-div {
     background: #12143F;
     color: white;
     position: sticky;
     overflow-y: scroll;
 }
+
 .client-left-div::-webkit-scrollbar {
     width: 5px;
 }
@@ -147,11 +150,11 @@
     flex-direction: column;
     justify-content: space-between;
     height: 100vh;
-    
-   
-  
-    
-    
+
+
+
+
+
 }
 
 .client_top_navbar {
@@ -598,11 +601,95 @@ th {
 .Billing_data_table {
     min-height: 100vh;
     background: #F1F4FA;
-    
+
 }
-.data-table{
+
+.data-table {
     position: sticky;
     overflow-y: scroll;
+}
+
+.from-content {
+    padding: 20px;
+
+}
+
+.from-input {
+    border: 2px solid rgb(207, 204, 204);
+    width: 100%;
+    height: 37px;
+    padding: 0 10px;
+}
+
+.dropdown-item {
+    cursor: pointer;
+}
+
+
+.modat-title {
+    background-color: #0F7EC2;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+.modal-body p {
+    padding: 30px 10px;
+    text-align: center;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    /* Adjust the top margin to center vertically */
+    border: 1px solid #888;
+    width: 100px;
+    /* Fixed width */
+    max-width: 30%;
+}
+
+.close-modal {
+    color: white;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.cancle {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    border: 1px solid rgba(0, 0, 0, 0.08);
+    border-radius: 4px;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 2e-06) 0%, rgba(0, 0, 0, 0.02) 100%), #F5F5F5;
+}
+
+.connfirm {
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.04) 99.48%, rgba(0, 0, 0, 0.04) 99.49%), #007BE5;
+    border: 1px solid #0F7EC2;
+    border-radius: 4px;
+    color: white;
 }
 
 /* Media query for small devices */
