--- a/client protal/client-protal.css
+++ b/client protal/client-protal.css
@@ -692,8 +692,141 @@ th {
     color: white;
 }
 
+
+.upload_file_continer{
+    display: grid;
+    grid-template-columns: 100%;
+    gap: 30px;
+    height: 100vh;
+}
+.files-nav {
+    background: #FAFAFA;
+    box-shadow: inset 0px -1px 0px rgba(0, 0, 0, 0.08);
+    padding: 10px 3px;
+}
+.files-dri {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    color: #0F7EC2;
+    margin-top: 4px;
+}
+.icon-picture {
+    cursor: pointer;
+}
+
+.icon-table {
+    cursor: pointer;
+}
+.icon-table-bg{
+    background-color: #0F7EC2;
+   padding-left: 5px;
+   padding-right: 5px;
+    border-radius: 3px;
+}
+
+.fiels-side-details {
+    background-color: white;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.05);
+    border: 1px solid rgba(0, 0, 0, 0.08);
+    display: none;
+    padding: 10px 15px;
+}
+.close-button {
+    width: 15px;
+    height: 15px;
+    cursor: pointer;
+}
+.fiels-image-container-details {
+    background: #FFFFFF;
+    width: 180px;
+    height: 180px;
+    border: 1px solid rgba(0, 0, 0, 0.08);
+    text-align: center;
+}
+.project-image {
+    width:120px;
+    height: 120px;
+    object-fit:contain;
+
+}
+.files-image-folder {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 10px;
+}
+.files-image-container {
+    background: #FFFFFF;
+    width: 190px;
+    height: 230px;
+    border: 1px solid rgba(0, 0, 0, 0.08);
+    text-align: center;
+}
+.files-image-container:hover{
+    background-color: #b2d6f2;
+}
+.files-details-icon {
+    width: 16px;
+    height: 16px;
+    cursor: pointer;
+}
+
+.icon-togle-active{
+    background-color: #bbbebf;
+    padding: 0.5px 5px;
+}
+.image-container-active{
+    background-color: #b2d6f2;
+}
+
+.files-table-images{
+    width: 35px;
+    height: 35px;
+    border-radius: 5px;
+}
+
+
 /* Media query for small devices */
 @media (max-width: 767px) {
+ 
+    .files-nav {
+        flex-wrap: wrap;
+    }
+
+    .files-nav > div {
+        flex-basis: 100%;
+        margin-bottom: 10px;
+    }
+
+    .search-container {
+        margin-top: 10px;
+        flex-basis: 100%;
+    }
+
+    .dcheeck_box {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+    }
+   
+    .upload_file_continer{
+        display: grid;
+        grid-template-columns: 100%;
+        gap: 10px;
+        height: 100vh;
+    }
+    .files-image-folder {
+        display: grid;
+        grid-template-columns: 100%;
+        gap: 10px;
+        
+    }
+    .files-image-container{
+        margin: auto;
+    }
+   
     .client-container {
         grid-template-columns: 100%;
         /* Stack the divs vertically */
