--- a/css/style.css
+++ b/css/style.css
@@ -719,7 +719,12 @@
     color: #0F7EC2;
     margin-top: 4px;
 }
-
+.project-dri a{
+    text-decoration: none;
+}
+.project-dri a:hover{
+    text-decoration: none;
+}
 
 
 
@@ -818,7 +823,17 @@
     line-height: 20px;
     color: #424242;
 }
-
+.project-view-content{
+    display: grid;
+    grid-template-columns: 100%;
+    gap: 20px;
+}
+.active_link{
+    background-color: #888;
+    padding: 2px 6px;
+    color: white;
+    border-radius: 5px;
+}
 /* project Details end  */
 
 /* My work css start  */
