--- a/css/style.css
+++ b/css/style.css
@@ -829,10 +829,9 @@
     gap: 20px;
 }
 .active_link{
-    background-color: #888;
-    padding: 2px 6px;
-    color: white;
-    border-radius: 5px;
+    
+    color: black;
+  
 }
 .project-view-image-folder {
     display: grid;
@@ -1578,7 +1577,15 @@
     width: 90px;
 }
 
-
+.select-container{
+    display: flex;
+    align-items: center;
+    gap: 10px; 
+}
+.client_select {
+    flex: 1; 
+    min-width: 150px; 
+}
 .icon-togle-active{
     background-color: #bbbebf;
     padding: 0.5px 5px;
