--- a/client protal/Auth/singin.css
+++ b/client protal/Auth/singin.css
@@ -9,8 +9,11 @@
   background-repeat: no-repeat;
   background-size: cover;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-  margin: auto;
   object-fit: contain;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
 }
 
 .login_from_container {
