--- a/css/style.css
+++ b/css/style.css
@@ -763,6 +763,12 @@
 .image-container:hover {
   background-color: #b2d6f2;
 }
+.image-container:hover .download_icon{
+  display: block;
+}
+.image-container:hover .project-image{
+  opacity: 1;
+}
 .image-container-active {
   background-color: #b2d6f2;
 }
@@ -1552,6 +1558,57 @@
 .client_select {
   width: 100%;
   border: 1px solid rgba(0, 0, 0, 0.08);
+}
+
+.image_content{
+  position: relative;
+}
+.download_icon{
+  position: absolute;
+  top: 50px;
+  left: 70px;
+  display: none;
+
+}
+.project_zoom_icon{
+  cursor: pointer;
+}
+.project_download_icon{
+  cursor: pointer;
+}
+.zoom_modal img{
+  width: 100%;
+  height: 100vh;
+
+  text-align: center;
+  object-fit: cover;
+}
+.zoom_modal{
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 9999;
+  height: 100vh;
+}
+#zoom_modal{
+  background-color: #fff;
+  max-width: 750px;
+  margin: 0 auto;
+  border-radius: 5px;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.zoom_close_icon{
+  position: absolute;
+  right: 10px;
+  font-size: 30px;
+  color: #0f7ec2;
+  cursor: pointer;
 }
 @media screen and (max-width: 768px) {
   .menu-link:focus {
