--- a/client protal/client-protal.css
+++ b/client protal/client-protal.css
@@ -6,12 +6,13 @@
   grid-template-columns: 20% 80%;
   height: 100vh;
   transition: all 0.4s ease-in-out 0.5s;
-  
 }
 
 .client-right-div {
   overflow: auto;
   max-width: 100%;
+  height: 100%;
+  position: relative;
 }
 
 .client-left-div {
@@ -19,6 +20,8 @@
   color: white;
   position: sticky;
   overflow-y: scroll;
+  height: 100%;
+  z-index: 1;
 }
 
 .client-left-div::-webkit-scrollbar {
@@ -782,7 +785,6 @@ th {
 .table_container {
   background: #f1f4fa;
   min-height: 100vh;
- 
 }
 
 .marketing_expart_contaner {
@@ -801,9 +803,7 @@ th {
   border: 1px solid transparent;
   text-align: center;
   flex: 0 0 calc(25% - 20px);
-
 }
-
 
 .marketing_expart img {
   width: 110px;
@@ -825,34 +825,31 @@ th {
   margin-top: -10px;
   color: #424242;
 }
-.expart_contact{
-  font-family: 'Inter';
+.expart_contact {
+  font-family: "Inter";
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
-  color: #0F1222;
+  color: #0f1222;
 }
-.expart_email{
-  font-family: 'Inter';
+.expart_email {
+  font-family: "Inter";
   font-style: normal;
   font-weight: 400;
   font-size: 13px;
-  color: #0F1222;
+  color: #0f1222;
 }
 .marketing_expart:hover {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  border: 1px solid #0F7EC2;
+  border: 1px solid #0f7ec2;
   color: #007be5;
-
-  
 }
-.marketing_expart:hover .expart_name{
+.marketing_expart:hover .expart_name {
   color: #007be5;
 }
 
 /* Media query for small devices */
 @media (max-width: 767px) {
-
   .marketing_expart_contaner {
     padding: 0 5px;
     display: grid;
@@ -904,11 +901,17 @@ th {
 
   .client-left-div {
     display: none;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1030;
+    overflow-y: auto;
+    width: 50%;
+    height: 100vh; /* Added height */
   }
 
-  .clicent_side_nav a {
-    text-align: center;
-  }
+  
 
   .dropdown-notification {
     width: 100%;
@@ -961,5 +964,10 @@ th {
 
   .Billing_info .Setup_Info {
     margin-left: 10%;
+  }
+  .notification-icon2 {
+    position: absolute;
+    right: 50px;
+    top: 10px;
   }
 }
