update mywork side details

--- a/client protal/client-protal.css
+++ b/client protal/client-protal.css
@@ -911,7 +911,13 @@ th {
     height: 100vh; /* Added height */
   }
 
+  .left-nav-hidden .client-left-div {
+    display: none;
+  }
   
+  .left-nav-hidden .client-container {
+    grid-template-columns: 0% 100%; 
+  }
 
   .dropdown-notification {
     width: 100%;
