--- a/client protal/client-protal.css
+++ b/client protal/client-protal.css
@@ -850,6 +850,13 @@ th {
 
 /* Media query for small devices */
 @media (max-width: 767px) {
+  .content {
+    width: 85% !important;
+  }
+
+  .col-form-label {
+    padding-left: 0px !important;
+  }
   .marketing_expart_contaner {
     padding: 0 5px;
     display: grid;
